2007-08-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-io-error-message-area.c: avoid conflicting
	accelerators. Patch by Patrick Wade, bug #444909.

2007-08-12  Vincent Geddes  <vgeddes@gnome.org>

	* plugins/spell/languages-dialog.glade2,
	plugins/docinfo/docinfo.glade2,
	plugins/time/time.glade2,	 
	plugins/time/gedit-time-plugin.c,
	gedit/dialogs/gedit-open-location-dialog.c,
	gedit/dialogs/gedit-encodings-dialog.c,
	gedit/dialogs/gedit-page-setup-dialog.c,
	gedit/dialogs/gedit-search-dialog.glade,
	gedit/dialogs/gedit-preferences-dialog.c,
	gedit/dialogs/gedit-search-dialog.c:
	  
	Ensure all dialogs have HIG compliant border widths
	and spacings (#341650).

2007-08-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c: make sure the search highlighting
	text tag has higher priority than syntax highlighting tags.

2007-08-11  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c: obtain the search-match highlighing
	color from the style scheme if it specified. Based on a patch
	by Paolo Maggi.

2007-08-10  Paolo Borelli  <pborelli@katamail.com>

	* plugins/Makefile.am: modelines is in C these days so it should
	always be built. Spotted by Rui Tiago Cação Matos.

2007-08-08  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-widget.c: removed the warning
	when the path combobox changes the current selection when there is no
	active iter (because this is not really an invalid case). Fixes bug
	#460586

2007-08-01  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-plugins-engine.c: do not assign to a bitfield
	the result of a pointer comparison. It seems some compilers
	do not like it. reported by Rémi Cardona <remi@gentoo.org>.

=== gedit 2.19.3 ===

2007-08-01  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.19.3 released

2007-07-31  Paolo Borelli  <pborelli@katamail.com>

	* data/gedit.schemas.in:
	* gedit/gedit-prefs-manager.h:
